--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         <ul>
             <li>Set the date and time in your timezone that you want everyone to react to.</li>
             <li>Enter your scheduling message to the Input text box. {x} will be replaced by the corresponding timestamp upon parse, where x refers to the row number in the scheduler.</li>
-            <li>Export the scheduler setting as JSON to save it as text, and import the settings with the JSON.</li>
+            <li>To save the scheudle for next time, you can import & export the settings as JSON. (The website will usually autosave your settings)</li>
         </ul>
     </div>
 
